@@ -361,3 +361,5 @@ v0.73.1:
     - Fixed a permissions test error on spawn travel. It was failing to abort a teleport to spawn if you didn't have the correct permissions.
     - setting devmode and debug are now temporary settings for the current session only. They will not cause a save of config.yml.
     - Fixed teleport cooldown (essentials hook) to NOT teleport when in cooldown mode.
+    - New '/town toggle taxpercent'. Allows a town to set it's taxes as a percentage of a players wealth rather than a fixed fee.
+    - New '/town set taxes $$' to configure the tax rate (fixed or percentage) for a town.
